src/test/ui/consts/qualif-union.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/qualif-union.rs:28:26
   |
LL |     let _: &'static _ = &C1;
   |            ----------    ^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/qualif-union.rs:28:12
   |
LL |     let _: &'static _ = &C1;
   |            ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/qualif-union.rs:29:26
   |
LL |     let _: &'static _ = &C2;
   |            ----------    ^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/qualif-union.rs:29:12
   |
LL |     let _: &'static _ = &C2;
   |            ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/qualif-union.rs:30:26
   |
LL |     let _: &'static _ = &C3;
   |            ----------    ^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/qualif-union.rs:30:12
   |
LL |     let _: &'static _ = &C3;
   |            ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/qualif-union.rs:31:26
   |
LL |     let _: &'static _ = &C4;
   |            ----------    ^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |     let _: &'static _ = &C5;
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/qualif-union.rs:31:12
   |
LL |     let _: &'static _ = &C4;
   |            ^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/qualif-union.rs:32:26
   |
LL |     let _: &'static _ = &C5;
   |            ----------    ^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/qualif-union.rs:32:12
   |
LL |     let _: &'static _ = &C5;
   |            ^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0716`.
